update iconv, readline, ncurses, gdb

--- a/mingw-w64-readline/PKGBUILD
+++ b/mingw-w64-readline/PKGBUILD
@@ -3,8 +3,10 @@
 _realname=readline
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=8.0
-pkgrel=9300
+_basever=8.0
+_patchlevel=001
+pkgver=${_basever}.${_patchlevel}
+pkgrel=2
 pkgdesc="MinGW port of readline for editing typed command lines (mingw-w64)"
 arch=('any')
 depends=("${MINGW_PACKAGE_PREFIX}-termcap")
@@ -12,15 +14,37 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gcc")
 options=('staticlibs' 'strip')
 license=('GPL')
 url="https://cnswww.cns.cwru.edu/php/chet/readline/rltop.html"
-source=("https://ftp.gnu.org/gnu/${_realname}/${_realname}-${pkgver}.tar.gz"{,.sig})
+source=("https://ftp.gnu.org/gnu/${_realname}/${_realname}-${_basever}.tar.gz"{,.sig}
+        0001-Add-private-history_rename-function-and-in-WIN32-use.patch)
+if [ ${_patchlevel} -gt 00 ]; then
+    for (( p=1; p<=$((10#${_patchlevel})); p++ )); do
+        source=(${source[@]} https://ftp.gnu.org/gnu/${_realname}/${_realname}-${_basever}-patches/readline${_basever//./}-$(printf "%03d" $p){,.sig})
+    done
+fi
 validpgpkeys=('7C0135FB088AAF6C66C650B9BB5869F064EA74AB')
 sha256sums=('e339f51971478d369f8a053a330a190781acb9864cf4c541060f12078948e461'
+            'SKIP'
+            '353dcbbc0435c60e33f02f8fb1c2d10e9b966ebe1b3857a0b2e2e268029c6f35'
+            'd8e5e98933cf5756f862243c0601cb69d3667bb33f2c7b751fe4e40b2c3fd069'
             'SKIP')
+
+prepare() {
+  cd "${srcdir}/readline-${_basever}"
+  patch -p1 -i ${srcdir}/0001-Add-private-history_rename-function-and-in-WIN32-use.patch
+
+  for (( p=1; p<=$((10#${_patchlevel})); p++ )); do
+    msg "applying patch readline${_basever//./}-$(printf "%03d" $p)"
+    patch -Np0 -i ${srcdir}/readline${_basever//./}-$(printf "%03d" $p)
+  done
+
+  # Remove RPATH from shared objects (FS#14366)
+  sed -i 's|-Wl,-rpath,$(libdir) ||g' support/shobj-conf
+}
 
 build() {
   [[ -d ${srcdir}/build-${MINGW_CHOST} ]] && rm -rf ${srcdir}/build-${MINGW_CHOST}
   mkdir -p ${srcdir}/build-${MINGW_CHOST} && cd ${srcdir}/build-${MINGW_CHOST}
-  ../${_realname}-${pkgver}/configure \
+  ../${_realname}-${_basever}/configure \
     --prefix=${MINGW_PREFIX} \
     --host=${MINGW_CHOST} \
     --target=${MINGW_CHOST} \
@@ -34,4 +58,3 @@ package() {
   cd "${srcdir}/build-${MINGW_CHOST}"
   make install DESTDIR="${pkgdir}"
 }
-
