--- a/mingw-w64-gdb/PKGBUILD
+++ b/mingw-w64-gdb/PKGBUILD
@@ -6,22 +6,21 @@ pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 # Until https://gcc.gnu.org/bugzilla/show_bug.cgi?id=62279 is
 # fixed, we will stick with 7.6.2 which hasn't got this bug..
-pkgver=8.2.1
-pkgrel=9300
+pkgver=8.3.1
+pkgrel=3
 pkgdesc="GNU Debugger (mingw-w64)"
 arch=('any')
 url="https://www.gnu.org/software/gdb/"
 license=('GPL')
-groups=("${MINGW_PACKAGE_PREFIX}-toolchain"
-        "rtools-${_realname}")
+groups=("${MINGW_PACKAGE_PREFIX}-toolchain")
 depends=("${MINGW_PACKAGE_PREFIX}-expat"
          "${MINGW_PACKAGE_PREFIX}-libiconv"
+         "${MINGW_PACKAGE_PREFIX}-ncurses"
          "${MINGW_PACKAGE_PREFIX}-python3"
          "${MINGW_PACKAGE_PREFIX}-readline"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 checkdepends=('dejagnu' 'bc')
 makedepends=("${MINGW_PACKAGE_PREFIX}-iconv"
-             "${MINGW_PACKAGE_PREFIX}-ncurses"
              "${MINGW_PACKAGE_PREFIX}-xz")
 options=('staticlibs' '!distcc' '!ccache')
 source=(https://ftp.gnu.org/gnu/gdb/${_realname}-${pkgver}.tar.xz{,.sig}
@@ -33,18 +32,24 @@ source=(https://ftp.gnu.org/gnu/gdb/${_realname}-${pkgver}.tar.xz{,.sig}
         'gdb-fix-using-gnu-print.patch'
         'gdb-7.12-dynamic-libs.patch'
         'gdb-py3-fixes.patch'
-        'python-configure-path-fixes.patch')
+        'python-configure-path-fixes.patch'
+        'gdb-fix-tui-with-pdcurses.patch'
+        'gdb-8.3-lib-order.patch'
+        'gdb-home-is-userprofile.patch')
 validpgpkeys=('F40ADB902B24264AA42E50BF92EDB04BFF325CF3')
-sha256sums=('0a6a432907a03c5c8eaad3c3cffd50c00a40c3a5e3c4039440624bae703f2202'
+sha256sums=('1e55b4d7cdca7b34be12f4ceae651623aa73b2fd640152313f9f66a7149757c4'
             'SKIP'
             'a3e64bf3acc8e92016d493aa1e2fbb5b55c67bfce4359b3578d7a6b5e5d5692a'
             '225608a1e486ee98641611804b07209915367c6767a735ae928175ad45b93060'
             '82ea717b628c8970055a9cbb8edaed8fbebc2cac27467337426dfc4b4c514a6b'
             '6be0f95483e02d5447c93ab5e2c9554d254c6888b1fa3f3a4c011cd6a0a403ad'
             '264eba33ef71c4762514a634dcf94fdb778914dbba6ce99e63804fe063225d97'
-            '4398bd83a798baa15c0f91878391a0882239a682cf523ef6551766cba7b03699'
+            '4db9aed9f2ee2e4f6c86b2f124609df52fbb91820501035cb9783cf4691fedf9'
             'bfe8985e806200e5a1007c4565bd60de0a297369d17d4a0178512f2df29b34fc'
-            'bdf6c2b51d6c8c84b7b20abb9d1702f110c0c0e06e3d68eb6aba817664354450')
+            'bdf6c2b51d6c8c84b7b20abb9d1702f110c0c0e06e3d68eb6aba817664354450'
+            '4d6b2b8ab03cea1c47e882ed17ddc3c528e22c92e3538ab261d9bb629626d50b'
+            'd92e2135e6f1bed51128f702a0630a961c0eaf241bb35fdafd0fe0d67cd0fb48'
+            '2c58f0d5e4bd18341f6bbc13316ebc0251fe63633964c3a83840f43e11cd0854')
 
 prepare() {
   cd ${srcdir}/${_realname}-${pkgver}
@@ -65,14 +70,35 @@ prepare() {
   patch -p1 -i ${srcdir}/gdb-py3-fixes.patch
   patch -p1 -i ${srcdir}/python-configure-path-fixes.patch
 
+  patch -p1 -i ${srcdir}/gdb-fix-tui-with-pdcurses.patch
+  patch -p1 -i ${srcdir}/gdb-8.3-lib-order.patch
+  patch -p1 -i ${srcdir}/gdb-home-is-userprofile.patch
+
   # hack! - libiberty configure tests for header files using "$CPP $CPPFLAGS"
   sed -i "/ac_cpp=/s/\$CPPFLAGS/\$CPPFLAGS -O2/" libiberty/configure
 }
 
 build() {
   [[ -d ${srcdir}/build-${MINGW_CHOST} ]] && rm -rf ${srcdir}/build-${MINGW_CHOST}
-  mkdir ${srcdir}/build-${MINGW_CHOST}
-  cd ${srcdir}/build-${MINGW_CHOST}
+  mkdir ${srcdir}/build-${MINGW_CHOST} && cd ${srcdir}/build-${MINGW_CHOST}
+  
+  declare -a _extra_conf
+  if [ "${CARCH}" = "x86_64" ]; then
+    _extra_conf+=(--enable-64-bit-bfd)
+  else
+    LDFLAGS+=" -Wl,--large-address-aware"
+  fi
+
+  if check_option "debug" "y"; then
+    CFLAGS+=" -O0"
+    CXXFLAGS+=" -O0"
+  fi
+  
+
+  CPPFLAGS+=" -I${MINGW_PREFIX}/include/ncurses"
+  CFLAGS+=" -I${MINGW_PREFIX}/include/ncurses"
+  CXXFLAGS+=" -I${MINGW_PREFIX}/include/ncurses"
+  LDFLAGS+=" -fstack-protector"
 
   ../${_realname}-${pkgver}/configure \
     --build=${MINGW_CHOST} \
@@ -80,10 +106,11 @@ build() {
     --target=${MINGW_CHOST} \
     --prefix=${MINGW_PREFIX} \
     --enable-targets="i686-w64-mingw32,x86_64-w64-mingw32" \
-    --enable-64-bit-bfd \
+    "${_extra_conf[@]}" \
     --disable-werror \
     --disable-win32-registry \
     --disable-rpath \
+    --with-curses \
     --with-system-gdbinit=${MINGW_PREFIX}/etc/gdbinit \
     --with-system-readline \
     --with-python=${MINGW_PREFIX}/bin/python3 \
@@ -91,7 +118,8 @@ build() {
     --with-libiconv-prefix=${MINGW_PREFIX} \
     --with-zlib \
     --with-lzma \
-    --enable-tui
+    --enable-tui \
+    --enable-source-highlight=no
 
   make
 }
