--- a/mingw-w64-xvidcore/PKGBUILD
+++ b/mingw-w64-xvidcore/PKGBUILD
@@ -3,17 +3,17 @@
 _realname=xvidcore
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.3.5
-pkgrel=9002
+pkgver=1.3.7
+pkgrel=9500
 pkgdesc="XviD is an open source MPEG-4 video codec (mingw-w64)"
 arch=('any')
 license=('GPL')
-url="http://www.xvid.org/"
+url="http://www.xvid.com/"
 options=('strip' '!libtool' 'staticlibs')
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
              "${MINGW_PACKAGE_PREFIX}-pkg-config")
-source=(http://downloads.xvid.org/downloads/${_realname}-${pkgver}.tar.bz2)
-sha256sums=('7c20f279f9d8e89042e85465d2bcb1b3130ceb1ecec33d5448c4589d78f010b4')
+source=(https://downloads.xvid.com/downloads/${_realname}-${pkgver}.tar.bz2)
+sha256sums=('aeeaae952d4db395249839a3bd03841d6844843f5a4f84c271ff88f7aa1acff7')
 
 prepare() {
   cd ${srcdir}/${_realname}
@@ -28,7 +28,7 @@ build() {
     --prefix=${MINGW_PREFIX} \
     --build=${MINGW_CHOST} \
     --host=${MINGW_CHOST} \
-	--disable-assembly
+    --disable-assembly
 
   make
 }
