--- a/mingw-w64-x264-git/PKGBUILD
+++ b/mingw-w64-x264-git/PKGBUILD
@@ -6,8 +6,8 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=r2932.303c484e
-pkgrel=9002
+pkgver=r2991.1771b556
+pkgrel=9500
 pkgdesc="Library for encoding H264/AVC video streams (mingw-w64)"
 arch=('any')
 url="https://www.videolan.org/developers/x264.html"
@@ -18,10 +18,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
              "git")
 
 options=('strip' 'staticlibs')
-source=("${_realname}"::"git+https://git.videolan.org/git/${_realname}.git"
+source=("${_realname}"::"git+https://code.videolan.org/videolan/${_realname}.git"
         0001-beautify-pc.all.patch)
 sha256sums=('SKIP'
-            '0eba3b41ef0c01f33280ce61bdd47cb966d765c0cb02db239fc6c89d601a2596')
+            '8e92f4d6c1924664e7c9f5b797070a35f8eabbfce431f996167fe426fc833dda')
 
 pkgver() {
   cd ${srcdir}/${_realname}
