--- a/mingw-w64-ffmpeg/PKGBUILD
+++ b/mingw-w64-ffmpeg/PKGBUILD
@@ -61,7 +61,8 @@ build() {
     --enable-version3 \
     --enable-zlib \
     --disable-lzma \
-    --disable-doc
+    --disable-doc \
+    --extra-libs="$(${PKG_CONFIG:-pkgconfig} --libs-only-l --static vorbis)"
 
   make
 }
