--- a/mingw-w64-arrow/PKGBUILD
+++ b/mingw-w64-arrow/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=arrow
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.15.1
+pkgver=0.16.0
 pkgrel=1
 pkgdesc="Apache Arrow is a cross-language development platform for in-memory data (mingw-w64)"
 arch=("any")
@@ -23,7 +23,7 @@ options=("staticlibs" "strip" "!buildflags")
 #source_dir=${_realname}
 source=("${_realname}-${pkgver}.tar.gz"::"http://apache.osuosl.org/arrow/arrow-${pkgver}/apache-arrow-${pkgver}.tar.gz")
 source_dir="apache-${_realname}-${pkgver}"
-sha256sums=("9a2c58c72310eafebb4997244cbeeb8c26696320d0ae3eb3e8512f75ef856fc9")
+sha256sums=("261992de4029a1593195ff4000501503bd403146471b3168bd2cc414ad0fb7f5")
 
 pkgver() {
   cd "$source_dir"
@@ -58,14 +58,14 @@ build() {
     -DARROW_WITH_LZ4=OFF \
     -DARROW_JEMALLOC=OFF \
     -DARROW_BUILD_SHARED=OFF\
-    -DARROW_BOOST_VENDORED=OFF \
     -DARROW_WITH_ZLIB=ON \
     -DARROW_WITH_BROTLI=OFF \
     -DARROW_USE_GLOG=OFF \
     -DARROW_BUILD_UTILITIES=ON \
     -DPARQUET_BUILD_EXECUTABLES=ON \
     -DARROW_TEST_LINKAGE="static" \
-    -Ddouble-conversion_ROOT="${MINGW_PREFIX}" \
+    -DBOOST_SOURCE="SYSTEM" \
+    -DBOOST_ROOT="${MINGW_PREFIX}" \
     -DThrift_ROOT="${MINGW_PREFIX}"
 
   make
