--- a/mingw-w64-thrift/PKGBUILD
+++ b/mingw-w64-thrift/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=thrift
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.12.0
+pkgver=0.13.0
 pkgrel=1
 pkgdesc="Framework for scalable cross-language services development (mingw-w64)"
 arch=("any")
@@ -11,14 +11,14 @@ url="https://thrift.apache.org/"
 license=("Apache-2.0")
 depends=("${MINGW_PACKAGE_PREFIX}-boost"
          "${MINGW_PACKAGE_PREFIX}-openssl"
-		 "${MINGW_PACKAGE_PREFIX}-zlib")
+         "${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "bison"
              "flex"
              "make")
 options=("staticlibs" "strip" "!buildflags")
 source=("https://archive.apache.org/dist/thrift/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=("c336099532b765a6815173f62df0ed897528a9d551837d627c1f87fadad90428")
+sha256sums=("7ad348b88033af46ce49148097afe354d513c1fca7c607b59c33ebb6064b5179")
 
 build() {
   [[ -d "${srcdir}/build-${MINGW_CHOST}" ]] && rm -rf "${srcdir}/build-${MINGW_CHOST}"
@@ -32,10 +32,10 @@ build() {
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     -DCMAKE_CXX_STANDARD_LIBRARIES="$(pkg-config --libs --static openssl)" \
     -DWITH_SHARED_LIB="OFF" \
-    -DWITH_STATIC_LIB="ON" \
+    -DBUILD_SHARED_LIBS="OFF" \
     -DCMAKE_BUILD_TYPE="Release" \
     -DBUILD_COMPILER="ON" \
-    -DBUILD_TESTING="ON" \
+    -DBUILD_TESTING="OFF" \
     -DBUILD_EXAMPLES="ON" \
     -DBUILD_TUTORIALS="OFF" \
     -DWITH_STDTHREADS="OFF" \
