--- a/mingw-w64-python3/PKGBUILD
+++ b/mingw-w64-python3/PKGBUILD
@@ -168,6 +168,11 @@ prepare() {
         Modules/Setup.config.in \
         Python/fileblocks.c
 
+
+  # Workaround for old mingw-w64
+  plain "Apply Jeroen's workaround for older mingw-w64"
+  sed -i 's/IO_REPARSE_TAG_APPEXECLINK/(__MSABI_LONG(0x8000001B))/g' Modules/_stat.c
+
   plain "Apply Ray Donnelly's should-be-upstreamed patches"
   apply_patch_with_msg \
     0000-make-_sysconfigdata.py-relocatable.patch \
@@ -555,7 +560,7 @@ sha256sums=('75894117f6db7051c1b34f37410168844bbb357c139a8a10a352e9bf8be594e8'
             'df598e955ce9886159f857378314b59ac07aaa167bc23ffb656f5f61b7ff1b01'
             '551047905350e113384f99e0e929e9381dc0a4ed514ca4ebe279dcdad798edce'
             '1da319664d39427156488b9b39ff39e33c53ef608f66319fdf9fb9bcdb29020d'
-            'fc6164a90f0ca2a9341aaf4448b4334c3393459ca5cbad6d7149f8bcf70da5fe'
+            'SKIP'
             '8f917063fe5e662ffe11d6e782d5828c41ec54a04b90693db9b5df4280e9ade5'
             '181672743d9e2449064a1b18764fa400af5d3cd268098e7b7e5069d0b128caa2'
             '6f2032347bb40e2ebe9b3a03062147ffa2f656d47c87821623c3b7d46dc15ddb'
