--- a/mingw-w64-libjpeg-turbo/PKGBUILD
+++ b/mingw-w64-libjpeg-turbo/PKGBUILD
@@ -5,21 +5,23 @@
 _realname=libjpeg-turbo
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.5.3
+pkgver=2.0.4
 pkgrel=9002
 pkgdesc="JPEG image codec with accelerated baseline compression and decompression (mingw-w64)"
 arch=('any')
 url="http://libjpeg-turbo.virtualgl.org"
 license=(custom:'BSD-like')
-makedepends=("${MINGW_PACKAGE_PREFIX}-nasm" "${MINGW_PACKAGE_PREFIX}-gcc")
+makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-gcc"
+             "${MINGW_PACKAGE_PREFIX}-nasm")
 provides=("${MINGW_PACKAGE_PREFIX}-libjpeg")
 conflicts=("${MINGW_PACKAGE_PREFIX}-libjpeg")
 replaces=("${MINGW_PACKAGE_PREFIX}-libjpeg")
 options=('staticlibs' 'strip')
-source=("https://downloads.sourceforge.net/libjpeg-turbo/${_realname}-${pkgver}.tar.gz"
+source=(${_realname}-${pkgver}.tar.gz::https://github.com/libjpeg-turbo/libjpeg-turbo/archive/${pkgver}.tar.gz
         "0001-header-compat.mingw.patch"
         "libjpeg-turbo-1.3.1-libmng-compatibility.patch")
-sha256sums=('b24890e2bb46e12e72a79f7e965f409f4e16466d00e1dd15d93d73ee6b592523'
+sha256sums=('7777c3c19762940cff42b3ba4d7cd5c52d1671b39a79532050c85efb99079064'
             '166264f617734b33ac55ec8b70e6636d4e409c0d837667afe158e9d28200e6dd'
             '16336caddc949a8a082f39c218b3289288d144bb3b87f62565ed1b294ff8e526')
 
@@ -31,17 +33,16 @@ prepare() {
 
 build() {
   [[ -d ${srcdir}/build-${MINGW_CHOST} ]] && rm -rf ${srcdir}/build-${MINGW_CHOST}
-  mkdir -p "${srcdir}/build-${MINGW_CHOST}"
-  cd "${srcdir}/build-${MINGW_CHOST}"
-  ../${_realname}-${pkgver}/configure \
-    --prefix=${MINGW_PREFIX} \
-    --build=${MINGW_CHOST} \
-    --host=${MINGW_CHOST} \
-    --target=${MINGW_CHOST} \
-    --with-jpeg8 \
-    --disable-shared \
-    --enable-static \
-    --mandir=${MINGW_PREFIX}/share/man
+  mkdir -p "${srcdir}/build-${MINGW_CHOST}" && cd "${srcdir}/build-${MINGW_CHOST}"
+
+  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
+  ${MINGW_PREFIX}/bin/cmake \
+    -G"MSYS Makefiles" \
+    -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
+    -DENABLE_STATIC=ON \
+    -DENABLE_SHARED=OFF \
+    -DWITH_JPEG8=ON \
+    ../${_realname}-${pkgver}
 
   make
 }
@@ -60,8 +61,7 @@ package() {
   # Licenses
   # See https://www.libjpeg-turbo.org/About/License
   cd "${srcdir}/${_realname}-${pkgver}"
-  install -Dm644 README.ijg            "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/README.ijg"
-  install -Dm644 README.md  "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/README.md"
-  install -Dm644 simd/jsimdext.inc "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/simd/jsimdext.inc"
+  install -Dm644 README.ijg "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/README.ijg"
+  install -Dm644 README.md "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/README.md"
+  install -Dm644 simd/nasm/jsimdext.inc "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/simd/jsimdext.inc"
 }
-
