--- a/mingw-w64-libgeotiff/PKGBUILD
+++ b/mingw-w64-libgeotiff/PKGBUILD
@@ -42,7 +42,7 @@ prepare() {
 build() {
   [[ -d "${srcdir}/build-${MINGW_CHOST}" ]] && rm -rf "${srcdir}/build-${MINGW_CHOST}"
   mkdir "${srcdir}/build-${MINGW_CHOST}" && cd "${srcdir}/build-${MINGW_CHOST}"
-  LIBS="-lsqlite3 -lstdc++" \
+  LIBS="-lsqlite3 -ljpeg -lz -lstdc++" \
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
     --build=${MINGW_CHOST} \
