--- a/mingw-w64-libspatialite/PKGBUILD
+++ b/mingw-w64-libspatialite/PKGBUILD
@@ -31,6 +31,7 @@ prepare() {
   cd "${srcdir}/${_realname}-${_ver}${_rel//./}"
   sed -i configure.ac -e "s|mingw32|${MINGW_CHOST}|g"
   patch -p1 -i ${srcdir}/01-fix-pkgconfig.patch
+  sed -i.bak 's/--ldflags`/--static-clibs`" -lstdc++"/g' configure.ac
   autoreconf
 }
 
@@ -39,13 +40,13 @@ build() {
   mkdir -p "${srcdir}/build-${MINGW_CHOST}" && cd "${srcdir}/build-${MINGW_CHOST}"
   
   CPPFLAGS+=" -DACCEPT_USE_OF_DEPRECATED_PROJ_API_H=1"
-  
   ../${_realname}-${_ver}${_rel//./}/configure \
     --host=${MINGW_CHOST} \
     --target=${MINGW_CHOST} \
     --build=${MINGW_CHOST} \
     --prefix=${MINGW_PREFIX} \
     --enable-libxml2 \
+    --with-geosconfig="${MINGW_PREFIX}/bin/${MINGW_CHOST}-geos-config" \
     --enable-static \
     --disable-shared
 
