--- a/mingw-w64-libspatialite/PKGBUILD
+++ b/mingw-w64-libspatialite/PKGBUILD
@@ -31,7 +31,8 @@ prepare() {
   cd "${srcdir}/${_realname}-${_ver}${_rel//./}"
   sed -i configure.ac -e "s|mingw32|${MINGW_CHOST}|g"
   patch -p1 -i ${srcdir}/01-fix-pkgconfig.patch
-  sed -i.bak 's/--ldflags`/--static-clibs`" -lstdc++"/g' configure.ac
+  sed -i 's/--ldflags`/--static-clibs`" -lstdc++"/g' configure.ac
+  sed -i 's/-lgeos_c/-lgeos_c -lgeos -lstdc++ -lm/' configure.ac
   autoreconf
 }
 
@@ -40,7 +41,8 @@ build() {
   mkdir -p "${srcdir}/build-${MINGW_CHOST}" && cd "${srcdir}/build-${MINGW_CHOST}"
   
   CPPFLAGS+=" -DACCEPT_USE_OF_DEPRECATED_PROJ_API_H=1"
-  LIBS="-lsqlite3 -lgeos -lstdc++ -lm -lws2_32" \
+  LIBS="-lsqlite3 -lgeos_c -lgeos -lstdc++ -lz -liconv -lm -lws2_32" \
+  LIBXML2_LIBS="$(pkg-config --libs-only-l --static libxml-2.0)" \
   ../${_realname}-${_ver}${_rel//./}/configure \
     --host=${MINGW_CHOST} \
     --target=${MINGW_CHOST} \
