--- a/mingw-w64-libspatialite/PKGBUILD
+++ b/mingw-w64-libspatialite/PKGBUILD
@@ -31,6 +31,8 @@ prepare() {
   cd "${srcdir}/${_realname}-${_ver}${_rel//./}"
   sed -i configure.ac -e "s|mingw32|${MINGW_CHOST}|g"
   patch -p1 -i ${srcdir}/01-fix-pkgconfig.patch
+  
+  # Jeroen: hacks for linking static geos
   sed -i 's/--ldflags`/--static-clibs`" -lstdc++"/g' configure.ac
   sed -i 's/-lgeos_c/-lgeos_c -lgeos -lstdc++ -lm/' configure.ac
   autoreconf
@@ -40,6 +42,7 @@ build() {
   [[ -d "${srcdir}"/build-${MINGW_CHOST} ]] && rm -rf "${srcdir}"/build-${MINGW_CHOST}
   mkdir -p "${srcdir}/build-${MINGW_CHOST}" && cd "${srcdir}/build-${MINGW_CHOST}"
   
+  # Remove CPPFLAGS for spatialite 5.0 (which should support proj6)
   CPPFLAGS+=" -DACCEPT_USE_OF_DEPRECATED_PROJ_API_H=1"
   LIBXML2_LIBS="$(pkg-config --libs-only-l --static libxml-2.0)" \
   ../${_realname}-${_ver}${_rel//./}/configure \
