--- a/mingw-w64-openjpeg2/PKGBUILD
+++ b/mingw-w64-openjpeg2/PKGBUILD
@@ -19,27 +19,46 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
 options=('staticlibs' 'strip')
 source=(${_realname}-${pkgver}.tar.gz::https://github.com/uclouvain/openjpeg/archive/v${pkgver}.tar.gz
         0001-fix-install-for-dlls.all.patch
+        0002-cmake-files-destination.patch
         0003-versioned-dlls.mingw.patch
+        0004-mingw-disable-java.patch
         0005-sock-jpip.all.patch
-        0006-openjpeg-2.1.0-stdcall-for-all-win.patch
-        0007-fix-build-2.2.0.patch)
-sha256sums=('6fddbce5a618e910e03ad00d66e7fcd09cc6ee307ce69932666d54c73b7c6e7b'
+        0006-openjpeg-2.1.0-stdcall-for-all-win.patch)
+sha256sums=('63f5a4713ecafc86de51bfad89cc07bb788e9bba24ebbf0c4ca637621aadb6a9'
             '3f3bde353ca3432f157258164c5e3c345af82ca3a9d5a68f815c3030b01cbc32'
-            'b45bc20a761b0d8dfd039ee9443a12d95ddd89ce05683fe0510fb8061f608b78'
-            'b7b22dca26d5fd98ca5bc6ce775bbbabebc0e10fcf07fd0afb54d580699b8312'
-            'e8c375faa317c819174b50aa43b6be61c108872661b014738c4a0cfa95aac919'
-            'c72f1ff3b7a9d607e4fd864c674f3bb611b8b852b0830609a8cb3f632db2d820')
+            '31b2cc6824b07b705ba1c05b38904c8c4fc6ba39acefebda3e6ec85dbef9a174'
+            '0f95f52b6fd662acb84b481a998ec4170369fe94247e0fa227fcda1f6ba18f1b'
+            'adade9b29e4292b642d547644e26fab6e193bbfe31d25f07d89a8c35e4d0993d'
+            '9df169f03e6e69cba0d7d33592f9eba373a02cd9554b456d3eb9ff3d9135391b'
+            'e8c375faa317c819174b50aa43b6be61c108872661b014738c4a0cfa95aac919')
 
+# Helper macros to help make tasks easier #
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying $_patch"
+    patch -Nbp1 -i "${srcdir}/$_patch"
+  done
+}
+
+del_file_exists() {
+  for _fname in "$@"
+  do
+    if [ -f $_fname ]; then
+      rm -rf $_fname
+    fi
+  done
+}
+# =========================================== #
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
-  patch -p1 -i ${srcdir}/0001-fix-install-for-dlls.all.patch
-  patch -p1 -i ${srcdir}/0003-versioned-dlls.mingw.patch
-  patch -p1 -i ${srcdir}/0005-sock-jpip.all.patch
-  patch -p1 -i ${srcdir}/0007-fix-build-2.2.0.patch
+  apply_patch_with_msg \
+   0001-fix-install-for-dlls.all.patch \
+   0002-cmake-files-destination.patch \
+   0003-versioned-dlls.mingw.patch \
+   0004-mingw-disable-java.patch \
+   0005-sock-jpip.all.patch
   #patch -p1 -i ${srcdir}/0006-openjpeg-2.1.0-stdcall-for-all-win.patch
-
-  # Hack for static linking libtiff (there must be a better way...)
-  sed -i 's/${TIFF_LIBRARIES}/"tiff -ljpeg"/g' thirdparty/CMakeLists.txt
 }
 
 build() {
