--- a/mingw-w64-openjpeg2/PKGBUILD
+++ b/mingw-w64-openjpeg2/PKGBUILD
@@ -67,6 +67,7 @@ build() {
   mkdir ${srcdir}/build-static-${MINGW_CHOST}
   cd ${srcdir}/build-static-${MINGW_CHOST}
 
+  LIBS="-ljpeg -lz" \
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake \
     -G"MSYS Makefiles" \
