--- a/mingw-w64-proj/PKGBUILD
+++ b/mingw-w64-proj/PKGBUILD
@@ -12,10 +12,17 @@ license=('MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-sqlite3")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-libtool")
 options=('staticlibs' 'strip')
-source=("http://download.osgeo.org/proj/${_realname}-${pkgver}.tar.gz")
-sha256sums=('6de0112778438dcae30fcc6942dee472ce31399b9e5a2b67e8642529868c86f8')
+source=("http://download.osgeo.org/proj/${_realname}-${pkgver}.tar.gz"
+        "https://patch-diff.githubusercontent.com/raw/OSGeo/PROJ/pull/1936.patch")
+sha256sums=('6de0112778438dcae30fcc6942dee472ce31399b9e5a2b67e8642529868c86f8'
+            'SKIP')
 
 groups=("rtools-${_realname}")
+
+prepare() {
+  cd ${_realname}-${pkgver}
+  patch -p1 -i "${srcdir}/1936.patch"
+}
 
 build() {
   [[ -d "${srcdir}/build-${MINGW_CHOST}" ]] && rm -rf "${srcdir}/build-${MINGW_CHOST}"
