--- a/mingw-w64-libgeotiff/PKGBUILD
+++ b/mingw-w64-libgeotiff/PKGBUILD
@@ -35,17 +35,18 @@ prepare() {
     fi
   done
 
-  #autoreconf -fiv
+  # Jeroen: workaround for static libtiff/libproj
+  TIFFLIBS=$(pkg-config --libs-only-l --static libtiff-4)
+  PROJLIBS=$(pkg-config --libs-only-l --static proj)
+  sed -i "s/-ltiff/${TIFFLIBS}/g" configure.ac
+  sed -i "s/-lproj/${PROJLIBS}/g" configure.ac
   ./autogen.sh
-
-  # Jeroen:workaround for static libtiff
-  sed -i.bak "s/-ltiff/$(pkg-config --libs-only-l --static libtiff-4)/g" configure
 }
 
 build() {
   [[ -d "${srcdir}/build-${MINGW_CHOST}" ]] && rm -rf "${srcdir}/build-${MINGW_CHOST}"
   mkdir "${srcdir}/build-${MINGW_CHOST}" && cd "${srcdir}/build-${MINGW_CHOST}"
-  LIBS="-lsqlite3 -lstdc++" \
+  #LIBS="-lsqlite3 -lstdc++" \
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
     --build=${MINGW_CHOST} \
@@ -75,7 +76,7 @@ includedir=\${prefix}/include
 Name: ${_realname}
 Description: GeoTIFF file format library
 Version: ${pkgver}
-Libs: -L\${libdir} -lgeotiff
+Libs: -L\${libdir} -lgeotiff ${PROJLIBS} ${TIFFLIBS} -lz
 Cflags: -I\${includedir}
 EOF
 
