--- a/mingw-w64-libspatialite/PKGBUILD
+++ b/mingw-w64-libspatialite/PKGBUILD
@@ -22,22 +22,22 @@ depends=("${MINGW_PACKAGE_PREFIX}-geos"
          "${MINGW_PACKAGE_PREFIX}-sqlite3"
          "${MINGW_PACKAGE_PREFIX}-libiconv")
 options=('strip')
-source=("https://www.gaia-gis.it/gaia-sins/${_realname}-${_ver}${_rel//./}.tar.gz"
-        "01-fix-pkgconfig.patch")
-sha256sums=('88900030a4762904a7880273f292e5e8ca6b15b7c6c3fb88ffa9e67ee8a5a499'
-            'SKIP')
+source=("https://www.gaia-gis.it/gaia-sins/${_realname}-${_ver}${_rel//./}.tar.gz")
+sha256sums=('88900030a4762904a7880273f292e5e8ca6b15b7c6c3fb88ffa9e67ee8a5a499')
 
 prepare() {
   cd "${srcdir}/${_realname}-${_ver}${_rel//./}"
   sed -i configure.ac -e "s|mingw32|${MINGW_CHOST}|g"
-  patch -p1 -i ${srcdir}/01-fix-pkgconfig.patch
 
-  # Jeroen: workaround for static proj/geos
+  # Jeroen: workarounds for static proj/geos
   PROJLIBS=$(pkg-config --libs-only-l --static proj)
   GEOSLIBS="-lgeos_c -lgeos -lstdc++ -lm"
+  XML2LIBS="$(pkg-config --libs-only-l --static libxml-2.0)" \
   sed -i 's/--ldflags`/--static-clibs`" -lstdc++"/g' configure.ac
   sed -i "s/-lproj/${PROJLIBS}/g" configure.ac
   sed -i "s/-geos_c/${GEOSLIBS}/g" configure.ac
+  sed -i "s/-xlm2/${XML2LIBS}/g" configure.ac
+  sed -i "s/-lspatialite/-lspatialite ${PROJLIBS} ${GEOSLIBS} ${XML2LIBS}/"
   ./autogen.sh
 }
 
@@ -47,7 +47,6 @@ build() {
   
   # Remove CPPFLAGS for spatialite 5.0 (which should support proj6)
   CPPFLAGS+=" -DACCEPT_USE_OF_DEPRECATED_PROJ_API_H=1"
-  LIBXML2_LIBS="$(pkg-config --libs-only-l --static libxml-2.0)" \
   ../${_realname}-${_ver}${_rel//./}/configure \
     --host=${MINGW_CHOST} \
     --target=${MINGW_CHOST} \
