--- a/mingw-w64-libspatialite/PKGBUILD
+++ b/mingw-w64-libspatialite/PKGBUILD
@@ -38,7 +38,7 @@ prepare() {
   sed -i "s/-geos_c/${GEOSLIBS}/g" configure.ac
   sed -i "s/-xlm2/${XML2LIBS}/g" configure.ac
   sed -i "s/-lspatialite/-lspatialite ${PROJLIBS} ${GEOSLIBS} ${XML2LIBS}/"
-  ./autogen.sh
+  autoreconf
 }
 
 build() {
