--- a/mingw-w64-libspatialite/PKGBUILD
+++ b/mingw-w64-libspatialite/PKGBUILD
@@ -34,10 +34,7 @@ prepare() {
   GEOSLIBS="-lgeos_c -lgeos -lstdc++ -lm"
   XML2LIBS="$(pkg-config --libs-only-l --static libxml-2.0)" \
   sed -i 's/--ldflags`/--static-clibs`" -lstdc++"/g' configure.ac
-  sed -i "s/-lproj/${PROJLIBS}/g" configure.ac
-  sed -i "s/-geos_c/${GEOSLIBS}/g" configure.ac
-  sed -i "s/-xlm2/${XML2LIBS}/g" configure.ac
-  sed -i "s/-lspatialite/-lspatialite ${PROJLIBS} ${GEOSLIBS} ${XML2LIBS}/g" configure.ac
+  sed -i "s/-lspatialite/-lspatialite ${PROJLIBS} ${GEOSLIBS} ${XML2LIBS}/" spatialite.pc.in
   autoreconf
 }
 
@@ -47,6 +44,8 @@ build() {
   
   # Remove CPPFLAGS for spatialite 5.0 (which should support proj6)
   CPPFLAGS+=" -DACCEPT_USE_OF_DEPRECATED_PROJ_API_H=1"
+  LIBXML2_LIBS="${XML2LIBS}" \
+  LIBS="${PROJLIBS}" \
   ../${_realname}-${_ver}${_rel//./}/configure \
     --host=${MINGW_CHOST} \
     --target=${MINGW_CHOST} \
