--- a/mingw-w64-libspatialite/PKGBUILD
+++ b/mingw-w64-libspatialite/PKGBUILD
@@ -22,19 +22,21 @@ depends=("${MINGW_PACKAGE_PREFIX}-geos"
          "${MINGW_PACKAGE_PREFIX}-sqlite3"
          "${MINGW_PACKAGE_PREFIX}-libiconv")
 options=('strip')
-source=("https://www.gaia-gis.it/gaia-sins/${_realname}-${_ver}${_rel//./}.tar.gz"
-        "01-fix-pkgconfig.patch")
-sha256sums=('88900030a4762904a7880273f292e5e8ca6b15b7c6c3fb88ffa9e67ee8a5a499'
-            '50dace4542a2f378131be76c9dfe45fd78e7cf135f1339df8665b5f26c8ad6cc')
+source=("https://www.gaia-gis.it/gaia-sins/${_realname}-${_ver}${_rel//./}.tar.gz")
+sha256sums=('88900030a4762904a7880273f292e5e8ca6b15b7c6c3fb88ffa9e67ee8a5a499')
 
 prepare() {
   cd "${srcdir}/${_realname}-${_ver}${_rel//./}"
   sed -i configure.ac -e "s|mingw32|${MINGW_CHOST}|g"
-  patch -p1 -i ${srcdir}/01-fix-pkgconfig.patch
-  
-  # Jeroen: hacks for linking static geos
+
+  # Jeroen: workarounds for static proj/geos
+  PROJLIBS=$(pkg-config --libs-only-l --static proj)
+  GEOSLIBS="-lgeos_c -lgeos -lstdc++ -lm"
+  XML2LIBS="$(pkg-config --libs-only-l --static libxml-2.0)"
+  FREEXLLIBS="$(pkg-config --libs-only-l --static freexl)"
   sed -i 's/--ldflags`/--static-clibs`" -lstdc++"/g' configure.ac
-  sed -i 's/-lgeos_c/-lgeos_c -lgeos -lstdc++ -lm/' configure.ac
+  sed -i "s/-lgeos_c/${GEOSLIBS}/g" configure.ac
+  sed -i "s/-lspatialite/-lspatialite ${PROJLIBS} ${GEOSLIBS} ${FREEXLLIBS} ${XML2LIBS}/" spatialite.pc.in
   autoreconf
 }
 
@@ -44,8 +46,8 @@ build() {
   
   # Remove CPPFLAGS for spatialite 5.0 (which should support proj6)
   CPPFLAGS+=" -DACCEPT_USE_OF_DEPRECATED_PROJ_API_H=1"
-  LIBS="-lsqlite3 -lstdc++" \
-  LIBXML2_LIBS="$(pkg-config --libs-only-l --static libxml-2.0)" \
+  LIBXML2_LIBS="${XML2LIBS}" \
+  LIBS="${PROJLIBS}" \
   ../${_realname}-${_ver}${_rel//./}/configure \
     --host=${MINGW_CHOST} \
     --target=${MINGW_CHOST} \
