--- a/mingw-w64-libgeotiff/PKGBUILD
+++ b/mingw-w64-libgeotiff/PKGBUILD
@@ -37,7 +37,7 @@ prepare() {
 
   # Jeroen: workaround for static libtiff/libproj
   TIFFLIBS=$(pkg-config --libs-only-l --static libtiff-4)
-  PROJLIBS=$(pkg-config --libs-only-l --static proj)
+  PROJLIBS=$(pkg-config --libs-only-l --static proj libcurl libtiff-4)
   sed -i "s/-ltiff/${TIFFLIBS}/g" configure.ac
   sed -i "s/-lproj/${PROJLIBS}/g" configure.ac
   ./autogen.sh
